--- a/src/app/components/navigation.component.html
+++ b/src/app/components/navigation.component.html
@@ -54,7 +54,7 @@
           </div>
 
           <!-- Data File Summary -->
-          <div class="flex w-58 p-2.5 rounded-lg cursor-pointer hover:bg-white/10 transition-colors" routerLink="/data-file-summary">
+          <div class="flex w-58 p-2.5 rounded-lg cursor-pointer hover:bg-white/10 transition-colors" routerLink="/admin-data-file-summary">
             <div class="flex items-center gap-1.5">
               <div class="w-4 h-4 bg-white/20 rounded"></div>
               <span class="text-gray-300 text-base capitalize">Data File Summary</span>
@@ -62,7 +62,7 @@
           </div>
 
           <!-- Data Table Summary -->
-          <div class="flex p-2.5 rounded-lg cursor-pointer hover:bg-white/10 transition-colors self-stretch" routerLink="/data-table-summary">
+          <div class="flex p-2.5 rounded-lg cursor-pointer hover:bg-white/10 transition-colors self-stretch" routerLink="/admin-data-table-summary">
             <div class="flex items-center gap-1.5">
               <div class="w-4 h-4 bg-white/20 rounded"></div>
               <span class="text-gray-300 text-base capitalize">Data Table Summary</span>
