Responsive Issues fixed

--- a/src/app/pages/rejected-submission.component.html
+++ b/src/app/pages/rejected-submission.component.html
@@ -48,7 +48,7 @@
         <span
           class="text-[#232323] text-base font-medium font-['Poppins'] capitalize"
         >
-          Submission Pending
+          Rejected Submission
         </span>
       </div>
 
@@ -140,7 +140,9 @@
   <div
     class="bg-white shadow-custom rounded-lg mx-5 mt-5 px-4 py-4 flex items-center justify-between"
   >
-    <button class="flex items-center gap-2 bg-[#F0F0F0] rounded px-2.5 py-1.5">
+    <button
+      class="flex items-center gap-2 bg-[#F0F0F0] rounded px-2.5 py-1.5 h-[39px]"
+    >
       <span
         class="text-[#434343] text-base font-medium font-['Poppins'] capitalize"
         >Filters</span
@@ -158,7 +160,9 @@
       </svg>
     </button>
 
-    <button class="flex items-center gap-2 bg-[#F0F0F0] rounded px-2.5 py-1.5">
+    <button
+      class="flex items-center gap-2 bg-[#F0F0F0] rounded px-2.5 py-1.5 h-[39px]"
+    >
       <span
         class="text-[#434343] text-base font-medium font-['Poppins'] capitalize"
         >Sort by</span
@@ -180,10 +184,10 @@
   <!-- Main Content -->
   <main class="ml-[92px] mr-5 mt-12 mb-8">
     <div class="bg-white rounded-lg shadow-custom p-8">
-      <div class="flex flex-col gap-5">
+      <div class="flex flex-col gap-[22px]">
         <div
-          *ngFor="let submission of submissions"
-          class="flex items-center justify-between p-[18px] rounded-lg border-l-4 border-[#12CEB0] bg-[#F2F4F7]"
+          *ngFor="let submission of rejectedSubmissions"
+          class="flex items-center justify-between p-3 rounded-lg border-l-4 border-[#12CEB0] bg-[#F2F4F7]"
         >
           <!-- Left Side - Info -->
           <div class="flex flex-col gap-2">
@@ -193,49 +197,60 @@
               {{ submission.id }} ({{ submission.title }})
             </h3>
             <p
-              class="text-[#212121] text-sm font-normal font-['Poppins'] capitalize"
+              class="text-[#6C6C6C] text-sm font-normal font-['Poppins'] capitalize"
             >
-              {{
-                submission.subId
-              }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Schedule:
-              {{
-                submission.schedule
-              }}&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Due:
-              {{ submission.dueDate }}
+              {{ submission.subId }}
             </p>
-            <div class="flex items-center gap-3">
-              <span
-                *ngFor="let tag of submission.tags"
-                class="flex items-center justify-center px-2.5 py-1 rounded border"
-                [style.borderColor]="tag.color"
-                [style.background]="
-                  'linear-gradient(0deg, ' +
-                  tag.color +
-                  '1A 0%, ' +
-                  tag.color +
-                  '1A 100%), #FFF'
-                "
-              >
-                <span
-                  class="text-[10px] font-normal font-['Poppins'] capitalize"
-                  [style.color]="tag.color"
-                >
-                  {{ tag.label }}
-                </span>
-              </span>
-            </div>
           </div>
 
-          <!-- Right Side - Actions -->
+          <!-- Tags -->
+          <div class="flex items-center gap-3">
+            <span
+              *ngFor="let tag of submission.tags"
+              class="flex items-center justify-center px-2.5 py-1 rounded border-[0.25px]"
+              [style.borderColor]="tag.color"
+              [style.background]="
+                'linear-gradient(0deg, ' +
+                tag.color +
+                '1A 0%, ' +
+                tag.color +
+                '1A 100%), #FFF'
+              "
+            >
+              <span
+                class="text-[10px] font-normal font-['Poppins'] capitalize"
+                [style.color]="tag.color"
+              >
+                {{ tag.label }}
+              </span>
+            </span>
+          </div>
+
+          <!-- Dates -->
+          <div class="flex flex-col gap-1 w-[234px]">
+            <p
+              class="text-[#212121] text-sm font-normal font-['Poppins'] capitalize"
+            >
+              Submitted: {{ submission.submittedDate }}
+            </p>
+            <p
+              class="text-[#DE1212] text-sm font-normal font-['Poppins'] capitalize"
+            >
+              Rejected : {{ submission.rejectedDate }}
+            </p>
+          </div>
+
+          <!-- Action Buttons -->
           <div class="flex items-center gap-3">
             <button
-              (click)="openManualModal(submission)"
-              class="flex items-center justify-center gap-2 px-2.5 py-1.5 h-[33px] rounded-lg bg-white hover:bg-gray-50 transition-colors"
+              (click)="onView(submission)"
+              class="flex items-center justify-center gap-2 w-[144px] h-[33px] px-2.5 py-1.5 rounded-lg bg-white hover:bg-gray-50 transition-colors"
             >
               <span
                 class="text-[#080114] text-sm font-normal font-['Poppins'] capitalize"
-                >Manual</span
               >
+                View
+              </span>
               <svg
                 class="w-[19px] h-[19px]"
                 viewBox="0 0 19 19"
@@ -243,14 +258,14 @@
                 xmlns="http://www.w3.org/2000/svg"
               >
                 <path
-                  d="M11.875 2.375H4.75C4.28587 2.375 3.84075 2.55937 3.51256 2.88756C3.18437 3.21575 3 3.66087 3 4.125V14.875C3 15.3391 3.18437 15.7842 3.51256 16.1124C3.84075 16.4406 4.28587 16.625 4.75 16.625H14.25C14.7141 16.625 15.1592 16.4406 15.4874 16.1124C15.8156 15.7842 16 15.3391 16 14.875V7.75L11.875 2.375Z"
+                  d="M1.1875 9.5C1.1875 9.5 4.75 3.16667 9.5 3.16667C14.25 3.16667 17.8125 9.5 17.8125 9.5C17.8125 9.5 14.25 15.8333 9.5 15.8333C4.75 15.8333 1.1875 9.5 1.1875 9.5Z"
                   stroke="#080114"
                   stroke-width="1.5"
                   stroke-linecap="round"
                   stroke-linejoin="round"
                 />
                 <path
-                  d="M11.875 2.375V7.75H16"
+                  d="M9.5 11.875C10.8117 11.875 11.875 10.8117 11.875 9.5C11.875 8.18832 10.8117 7.125 9.5 7.125C8.18832 7.125 7.125 8.18832 7.125 9.5C7.125 10.8117 8.18832 11.875 9.5 11.875Z"
                   stroke="#080114"
                   stroke-width="1.5"
                   stroke-linecap="round"
@@ -260,12 +275,14 @@
             </button>
 
             <button
-              class="flex items-center justify-center gap-2 px-2.5 py-1.5 h-[33px] rounded-lg bg-white hover:bg-gray-50 transition-colors"
+              (click)="onHistory(submission)"
+              class="flex items-center justify-center gap-2 w-[144px] h-[33px] px-2.5 py-1.5 rounded-lg bg-white hover:bg-gray-50 transition-colors"
             >
               <span
                 class="text-[#080114] text-sm font-normal font-['Poppins'] capitalize"
-                >History</span
               >
+                History
+              </span>
               <svg
                 class="w-[19px] h-[19px]"
                 viewBox="0 0 19 19"
@@ -290,12 +307,14 @@
             </button>
 
             <button
-              class="flex items-center justify-center gap-2 px-2.5 py-1.5 h-[33px] rounded-lg bg-white hover:bg-gray-50 transition-colors"
+              (click)="onDownload(submission)"
+              class="flex items-center justify-center gap-2 w-[144px] h-[33px] px-2.5 py-1.5 rounded-lg bg-white hover:bg-gray-50 transition-colors"
             >
               <span
                 class="text-[#080114] text-sm font-normal font-['Poppins'] capitalize"
-                >Download</span
               >
+                Download
+              </span>
               <svg
                 class="w-[19px] h-[19px]"
                 viewBox="0 0 19 19"
@@ -327,12 +346,12 @@
             </button>
 
             <button
-              (click)="openUploadModal(submission)"
-              class="flex items-center justify-center gap-2 px-2.5 py-1.5 h-[33px] rounded-lg bg-[#12CEB0] hover:bg-[#0FB59A] transition-colors"
+              (click)="openManualModal(submission)"
+              class="flex items-center justify-center gap-2 w-[144px] h-[33px] px-2.5 py-1.5 rounded-lg bg-white hover:bg-gray-50 transition-colors"
             >
               <span
-                class="text-white text-sm font-medium font-['Poppins'] capitalize"
-                >Upload</span
+                class="text-[#080114] text-sm font-normal font-['Poppins'] capitalize"
+                >Manual</span
               >
               <svg
                 class="w-[19px] h-[19px]"
@@ -341,21 +360,46 @@
                 xmlns="http://www.w3.org/2000/svg"
               >
                 <path
-                  d="M16.625 11.875V15.0417C16.625 15.4637 16.4574 15.8684 16.1589 16.1668C15.8605 16.4653 15.4558 16.6329 15.0337 16.6329H3.96667C3.54464 16.6329 3.13993 16.4653 2.84143 16.1668C2.54293 15.8684 2.375 15.4637 2.375 15.0417V11.875"
+                  d="M11.875 2.375H4.75C4.28587 2.375 3.84075 2.55937 3.51256 2.88756C3.18437 3.21575 3 3.66087 3 4.125V14.875C3 15.3391 3.18437 15.7842 3.51256 16.1124C3.84075 16.4406 4.28587 16.625 4.75 16.625H14.25C14.7141 16.625 15.1592 16.4406 15.4874 16.1124C15.8156 15.7842 16 15.3391 16 14.875V7.75L11.875 2.375Z"
+                  stroke="#080114"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+                <path
+                  d="M11.875 2.375V7.75H16"
+                  stroke="#080114"
+                  stroke-width="1.5"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                />
+              </svg>
+            </button>
+
+            <button
+              (click)="onResubmit(submission)"
+              class="flex items-center justify-center gap-2 w-[144px] h-[33px] px-2.5 py-1.5 rounded-lg bg-[#4A3F99] hover:bg-[#3d3280] transition-colors"
+            >
+              <span
+                class="text-white text-sm font-medium font-['Poppins'] capitalize"
+              >
+                Resubmit
+              </span>
+              <svg
+                class="w-[19px] h-[19px]"
+                viewBox="0 0 19 19"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M3.5 11V15.5H8M15.5 8V3.5H11"
                   stroke="white"
                   stroke-width="1.5"
                   stroke-linecap="round"
                   stroke-linejoin="round"
                 />
                 <path
-                  d="M13.4583 6.33333L9.5 2.375L5.54167 6.33333"
-                  stroke="white"
-                  stroke-width="1.5"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-                <path
-                  d="M9.5 2.375V11.875"
+                  d="M3.5 7C3.9 5 5.6 3.5 7.5 3.5C10.2614 3.5 12.5 5.73858 12.5 8.5C12.5 11.2614 10.2614 13.5 7.5 13.5C5.85 13.5 4.38 12.65 3.5 11.25"
                   stroke="white"
                   stroke-width="1.5"
                   stroke-linecap="round"
@@ -368,14 +412,6 @@
       </div>
     </div>
   </main>
-
-  <!-- File Upload Modal -->
-  <app-file-upload-modal
-    *ngIf="showUploadModal"
-    [submission]="selectedSubmission"
-    (close)="closeUploadModal()"
-    (fileSubmit)="handleFileSubmit($event)"
-  ></app-file-upload-modal>
 
   <!-- Template Manual Modal -->
   <app-template-manual-modal
